# PipeNetworkCompletion

./: .gitignore  CHANGELOG.md  CITATION.cff  DATA_NOT_INCLUDED.md  Inductive.ipynb  LICENSE  README.md  RELEASE.md  Transductive.ipynb  environment-cuda.yml  environment.yml  linemap.py  model_metrics1212.csv  process.py  pyproject.toml  val.shp  val.shx
Models/: model04_hiddensize_128_drop_00.pt  model04_hiddensize_64_drop_00.pt  model1111_hiddensize_128_drop_00.pt  model1111_hiddensize_32_drop_02.pt  model1111_hiddensize_32_drop_04.pt  model1111_hiddensize_32_drop_06.pt  model1212_hiddensize_128_drop_00.pt  model1212_hiddensize_128_drop_06.pt  model1212_hiddensize_32_drop_00.pt  model1212_hiddensize_32_drop_02.pt  model1212_hiddensize_32_drop_04.pt  model1212_hiddensize_32_drop_06.pt  model1212_hiddensize_64_drop_00.pt  model1212_hiddensize_64_drop_02.pt  model1212_hiddensize_64_drop_04.pt  model1212_hiddensize_64_drop_06.pt  model22_hiddensize_128_drop_00.pt  model22_hiddensize_128_drop_02.pt  model22_hiddensize_128_drop_04.pt  model22_hiddensize_32_drop_04.pt  model22_hiddensize_64_drop_00.pt  model22_hiddensize_64_drop_02.pt  model22_hiddensize_64_drop_06.pt  model40_hiddensize_32_drop_02.pt  modelskip_hiddensize_128_drop_00.pt  modelskip_hiddensize_128_drop_02.pt  modelskip_hiddensize_128_drop_06.pt  modelskip_hiddensize_32_drop_00.pt  modelskip_hiddensize_32_drop_02.pt  modelskip_hiddensize_32_drop_04.pt  modelskip_hiddensize_32_drop_06.pt  modelskip_hiddensize_64_drop_00.pt  modelskip_hiddensize_64_drop_02.pt  modelskip_hiddensize_64_drop_04.pt  modeltest_hiddensize_64_drop_00.pt
Module/: LocationEncoder.py  dataset.py
Roads_shp/: Roads_ExportFeatures.shp.xml
Sewer_shp/: SewerControlVa_ExportFeature.dbf  SewerControlVa_ExportFeature.sbn  SewerControlVa_ExportFeature.sbx  SewerControlVa_ExportFeature.shx  SewerDevice_ExportFeatures.shp  SewerFitting_ExportFeatures.dbf  SewerFitting_ExportFeatures.sbx  SewerFitting_ExportFeatures.shp  SewerFitting_ExportFeatures.shp.xml  SewerGravityMa_ExportFeature1.dbf  SewerGravityMa_ExportFeature1.sbn  SewerGravityMa_ExportFeature1.sbx  SewerGravityMa_ExportFeature1.shp.xml  (+24 more)
(+739 files in other folders)
